# p2p-play

./: .gitignore  AGENTS.md  ARCHITECTURE_SEPARATION.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONSTITUTION.md  CONTRIBUTING.md  Cargo.toml  KADEMLIA_USAGE.md  MIGRATION_CHECKLIST.md  README.md  REFACTORING_PLAN.md  WORKFLOWS.md  bootstrap_config.json  bootstrap_config_empty_test.json  bootstrap_config_invalid_test.json  bootstrap_config_mixed_test.json  bootstrap_config_no_peer_id_test.json  bootstrap_config_valid_test.json  custom_ping_config.json  frontend-crate-Cargo.toml  migrate_to_workspace.sh  network-crate-Cargo.toml  network-errors-template.rs  network-example.rs  network-interface-template.rs  network-lib-template.rs  network-types-template.rs  network_config.json  node_description.txt  notes.md  p2p-network.md  peer_key  ping_config.json  setup_workspace.sh  stories.db  stories.db-shm  stories.db-wal  stories.json  (+10 more)
.github/: copilot-instructions.md  pull_request_template.md
.github/workflows/: claude.yml  (+3 more)
docs/: CONTENT_VALIDATION_POLICY.md  CRYPTO_ERROR_DEMO.md  NETWORK_INTEGRATION_TESTING.md  WASM_SHARING_EXECUTION_TEST_PLAN.md  crypto_usage.md
p2p-core/: Cargo.toml  README.md  tarpaulin.toml
p2p-network/: COMPILE_FIX.md  README.md
p2p-play-frontend/: README.md
scripts/: test_ci_simulation.sh  test_runner.sh
src/: bootstrap.rs  bootstrap_logger.rs  circuit_breaker.rs  constants.rs  content_fetcher.rs  crypto.rs  data_dir.rs  error_logger.rs  errors.rs  event_handlers.rs  event_processor.rs  file_logger.rs  handlers.rs  lib.rs  main.rs  migrations.rs  network.rs  network_circuit_breakers.rs  relay.rs  storage.rs  time.rs  types.rs  ui.rs  validation.rs  wasm_executor.rs
test-wasm-add/: Cargo.toml
tests/: auto_subscription_tests.rs  bootstrap_logger_tests.rs  bootstrap_tests.rs  channel_discovery_integration_tests.rs  channel_floodsub_refresh_tests.rs  channel_subscription_tests.rs  channel_sync_tests.rs  chronological_stories_test.rs  circuit_breaker_integration_tests.rs  circuit_breaker_tests.rs  command_integration_tests.rs  connection_pooling_tests.rs  conversation_integration_tests.rs  conversation_simple_tests.rs  conversation_tests.rs  crypto_error_test.rs  crypto_integration_tests.rs  daemon_tests.rs  debug_channel_discovery_test.rs  enhanced_messaging_tests.rs  handlers_tests.rs  handshake_protocol_tests.rs  integration_tests.rs  message_notification_tests.rs  message_serialization_edge_cases_tests.rs  multi_peer_integration_tests.rs  network_circuit_breakers_tests.rs  network_config_connection_limits_tests.rs  network_config_tests.rs  network_failure_recovery_tests.rs  network_protocol_integration_tests.rs  network_reconnection_tests.rs  network_tests.rs  peer_connection_test.rs  performance_benchmark.rs  performance_load_tests.rs  ping_config_tests.rs  relay_integration_tests.rs  scrolllock_toggle_tests.rs  search_tests.rs  (+7 more)
(+78 files in other folders)
