[package]
name = "p2p-play"
version = "0.7.5"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libp2p = { version = "0.56.0", features = [  "tcp", "tokio", "floodsub", "macros", "identify", "mdns", "yamux", "noise", "ping", "request-response", "cbor", "kad", "memory-connection-limits"] }
tokio = { version = "1.43", features = ["io-util", "io-std", "macros", "rt", "rt-multi-thread", "sync", "fs"] }
#tokio = { version = "1.24", features = ["full"] }
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.5"
log = "0.4"
env_logger = "0.10"
futures = "0.3.15"
bytes = "1.0"
rusqlite = { version = "0.29", features = ["bundled"] }
ratatui = "0.27"
crossterm = "0.27"
chrono = { version = "0.4", features = ["serde"] }
chacha20poly1305 = "0.10"
hkdf = "0.12"
rand = "0.8"
sha2 = "0.10"
zeroize = "1.8"
async-trait = "0.1"

[dev-dependencies]
tempfile = "3.8"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin)'] }

