[workspace]
members = ["p2p-network", "p2p-play-frontend"]
resolver = "2"

[workspace.dependencies]
# Shared dependencies can be defined here
tokio = { version = "1.43", features = ["io-util", "io-std", "macros", "rt", "rt-multi-thread", "sync", "fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
thiserror = "1.0"
