[package]
name = "p2p-play"
version = "0.10.6"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libp2p = { version = "0.56.0", features = [  "tcp", "tokio", "floodsub", "macros", "identify", "mdns", "yamux", "noise", "ping", "request-response", "cbor", "kad", "memory-connection-limits", "dns", "rsa", "relay"] }
tokio = { version = "1.43", features = ["io-util", "io-std", "macros", "rt", "rt-multi-thread", "sync", "fs"] }
#tokio = { version = "1.24", features = ["full"] }
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.5"
log = "0.4"
env_logger = "0.10"
futures = "0.3.15"
bytes = "1.0"
rusqlite = { version = "0.29", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.22"
ratatui = "0.27"
crossterm = "0.27"
chrono = { version = "0.4", features = ["serde"] }
chacha20poly1305 = "0.10"
hkdf = "0.12"
sha2 = "0.10"
zeroize = "1.8"
async-trait = "0.1"
uuid = { version = "1.0", features = ["v4"] }
thiserror = "1.0"
anyhow = "1.0"
wasmtime = "24.0"
wasmtime-wasi = "24.0"
lru = "0.7"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }

[dev-dependencies]
tempfile = "3.8"
uuid = { version = "1.0", features = ["v4"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin)'] }

